# ai-playground

./: .gitignore  CLAUDE.md  README.md  commun.py  main.py  pruebas.py  pyproject.toml  test_input.json  utils.py
agents/: generation_agent.py  orchestrator_agent.py  orthography_agent.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
promts/: generation_promt.md  language_selector_promt.md  orthography_promt.md  translator_promt.md
